--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "llama-index-llms-ollama>=0.7.3",
     "streamlit>=1.49.1",
     "nest-asyncio>=1.6.0",
+    "pydantic-ai>=1.0.10",
 ]
 
 [dependency-groups]
